eliminate unnecessary variables and at the top show the result

--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -7,5 +7,6 @@ $theme-colors: (
         "secondary": #CDDC39,
         "tertiary": #C0CA33,
         "display": #ECEFF1,
-        "dark": #FFCA28
+        "dark": #FFCA28,
+        "light": #606060,
 );
