--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -9,18 +9,29 @@ body{
   --keyMinWidth: 50px;
   border-radius: 0px;
   width: var(--keyMinWidth);
-  height: 85px;
   font-size: 35px;
 }
 
 .display{
   width: 100%;
-  height: 125px;
 }
 
 .calculator{
   border-radius: 10px;
-  height: 550px;
-  width: 340px;
+  padding-bottom: 15px;
+  height: 100vh;
+}
+
+.justify-content-flex-end{
+  justify-content: flex-end;
+}
+
+h1{
+  font-size: 4rem;
+  height: 65px;
+}
+
+p{
+  height: 24px;
 }
 
